tests/errors/range_signedness_errors.ctp


def (main:
    u : unsigned:int = 10
    for (i in range(u, -10):
        pass
    )
)
    